git commit -m (I fixed the poor color contrast for the form boxes, button, and other page button in style css file)

--- a/style.css
+++ b/style.css
@@ -836,9 +836,9 @@ h4 {
     color: #cccccc !important;
 }
 
-.ltc-atomic-tangerine {
+/* .ltc-atomic-tangerine {
     color: #F3976C !important;
-}
+} */
 
 .ltc-atomic-tangerine:hover {
     color: #c27956 !important;
